--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
 
 <body>
 	<header>
+	<!-- nav -->
 		<nav class="navbar navbar-default yamm">
 			<div class="container">
 				<div class="tel-blc">
@@ -97,16 +98,27 @@
 						<li><a href=""><img src="img/logo.png" alt=""></a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">О компании</a></li>
+						<li><a class="active" href="#">О компании</a></li>
 						<li><a href="#">Доставка и оплата</a></li>
 						<li><a href="#">Сервис и гарантия</a></li>
 						<li><a href="#">Контакты</a></li>
-						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span class="badge">5</span></a></li>
 						<li><a class="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+		<!-- end nav -->
+		<section class="header-section">
+			<div class="container">
+				<div class="row">
+					<h2>Сумасшедшая распродажа</h2>
+					<h1>iPhone 7</h1>
+					<p>Всего за 44 000 рублей</p>
+					<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+				</div>
+			</div>
+		</section>
 	</header>
 
 
