--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 <body>
 	<header>
-	<!-- nav -->
+		<!-- nav -->
 		<nav class="navbar navbar-default yamm">
 			<div class="container">
 				<div class="tel-blc">
@@ -46,8 +46,8 @@
 							<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
 							<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-							</li>
-				
+						</li>
+
 						<!-- Grid 12 Menu -->
 						<li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><img src="img/Menu-Icon.png" alt=""> каталог</a>
 							<ul class="dropdown-menu">
@@ -109,18 +109,64 @@
 			</div>
 		</nav>
 		<!-- end nav -->
+		<!-- header-section -->
 		<section class="header-section">
-			<div class="container">
-				<div class="row">
-					<h2>Сумасшедшая распродажа</h2>
-					<h1>iPhone 7</h1>
-					<p>Всего за 44 000 рублей</p>
-					<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+			
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+				</ol>
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<div class="container">
+							<div class="row">
+								<h2>Сумасшедшая распродажа</h2>
+								<h1>iPhone 7</h1>
+								<p>Всего за 44 000 рублей</p>
+								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="item">
+						<div class="container">
+							<div class="row">
+								<h2>Сумасшедшая распродажа</h2>
+								<h1>iPhone 7</h1>
+								<p>Всего за 44 000 рублей</p>
+								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="item">
+						<div class="container">
+							<div class="row">
+								<h2>Сумасшедшая распродажа</h2>
+								<h1>iPhone 7</h1>
+								<p>Всего за 44 000 рублей</p>
+								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
+		<!-- header-section -->
 	</header>
-
+	<!-- end header -->
+	<section class="section-1">
+		<div class="container-fluid">
+			<div class="row">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus suscipit perspiciatis, quidem officia nam magnam tempore provident debitis tenetur alias a vel deserunt obcaecati, molestiae reiciendis! Amet, voluptas, aliquid.
+			</div>
+		</div>
+	</section>
 
 
 
