--- a/app/index.html
+++ b/app/index.html
@@ -33,16 +33,17 @@
 		<!-- nav -->
 		<nav class="navbar navbar-default yamm">
 			<div class="container">
-				<div class="tel-blc">
+				<div class="tel-blc hidden-xs">
 					<a href="tel:+78000000000">8 (800) 000-00-00</a>
 				</div>
 				<div class="navbar-header">
+				  <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#"><img src="img/logo.png" alt=""></a>
 					<button type="button" data-toggle="collapse" data-target="#navbar-collapse-grid" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				</div>
 				<div id="navbar-collapse-grid" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						
-						<li class="social-icons-navbar">
+						<li class="social-icons-navbar hidden-xs">
 							<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
 							<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
 							<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -95,7 +96,7 @@
 								</li>
 							</ul>
 						</li>
-						<li><a href=""><img src="img/logo.png" alt=""></a></li>
+						<li class="hidden-xs"><a href=""><img src="img/logo.png" alt=""></a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a class="active" href="#">О компании</a></li>
@@ -125,10 +126,12 @@
 					<div class="item active">
 						<div class="container">
 							<div class="row">
-								<h2>Сумасшедшая распродажа</h2>
-								<h1>iPhone 7</h1>
-								<p>Всего за 44 000 рублей</p>
-								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								<div class="col-lg-12">
+									<h2>Сумасшедшая распродажа</h2>
+									<h1>iPhone 7</h1>
+									<p>Всего за 44 000 рублей</p>
+									<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -136,10 +139,12 @@
 					<div class="item">
 						<div class="container">
 							<div class="row">
-								<h2>Сумасшедшая распродажа</h2>
-								<h1>iPhone 7</h1>
-								<p>Всего за 44 000 рублей</p>
-								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								<div class="col-lg-12">
+									<h2>Сумасшедшая распродажа</h2>
+									<h1>iPhone 7</h1>
+									<p>Всего за 44 000 рублей</p>
+									<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -147,10 +152,12 @@
 					<div class="item">
 						<div class="container">
 							<div class="row">
-								<h2>Сумасшедшая распродажа</h2>
-								<h1>iPhone 7</h1>
-								<p>Всего за 44 000 рублей</p>
-								<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								<div class="col-lg-12">
+									<h2>Сумасшедшая распродажа</h2>
+									<h1>iPhone 7</h1>
+									<p>Всего за 44 000 рублей</p>
+									<a class="btn" href=""><i class="fa fa-shopping-basket" aria-hidden="true"></i>Перейти к покупке</a>
+								</div>
 							</div>
 						</div>
 					</div>
