goods blc ended

--- a/app/index.html
+++ b/app/index.html
@@ -312,15 +312,20 @@
 						<!-- wide-good item -->
 						<div class="col-lg-6">
 
-							<div class="item-good">
+							<div class="item-good-wide">
 								<div class="good-wide-img-blc">
 									<img src="img/good-wide-1.png" alt="">
 								</div>
-								<h3>Предзаказ iPhone 8 Plus</h3>
-								<span>16Gb space gray</span>
-								<p>Предусматривается небольшое текстовое описание акции 
-									в одно предложение</p>
-									<a class="btn" href="">Перейти к покупке</a>
+								<div class="good-wide-wrapper-action">
+									<span>от 79 900 Руб.</span>
+									<a class="btn" href="">Оформить</a>
+								</div>
+								<div class="good-wide-wrapper-text">
+									<h3>Предзаказ iPhone 8 Plus</h3>
+									<span>16Gb space gray</span>
+									<p>Предусматривается небольшое текстовое описание акции 
+										в одно предложение</p>
+									</div>
 								</div>
 
 							</div>
