--- a/app/index.html
+++ b/app/index.html
@@ -333,16 +333,67 @@
 
 						</div>
 						<!-- end 2nd row -->
+						<!-- 3rd row -->
+					<div class="row 3rd-row">
+					<!-- item-ifno -->
+						<div class="col-lg-3">
+							<div class="item-info">
+								<img src="img/info-sec2.png" alt="">
+								<h4>Наличный <br>
+									и безналичный расчет</h4>
+									<p>Оплачивайте покупки наиболее 
+										удобным для вас способом</p>
+									</div>
+								</div>
+								<!-- end item-ifno -->
+
+								<!-- item-ifno -->
+						<div class="col-lg-3">
+							<div class="item-info">
+								<img src="img/info-sec2.png" alt="">
+								<h4>Наличный <br>
+									и безналичный расчет</h4>
+									<p>Оплачивайте покупки наиболее 
+										удобным для вас способом</p>
+									</div>
+								</div>
+								<!-- end item-ifno -->
+
+								<!-- item-ifno -->
+						<div class="col-lg-3">
+							<div class="item-info">
+								<img src="img/info-sec2.png" alt="">
+								<h4>Наличный <br>
+									и безналичный расчет</h4>
+									<p>Оплачивайте покупки наиболее 
+										удобным для вас способом</p>
+									</div>
+								</div>
+								<!-- end item-ifno -->
+
+								<!-- item-ifno -->
+						<div class="col-lg-3">
+							<div class="item-info">
+								<img src="img/info-sec2.png" alt="">
+								<h4>Наличный <br>
+									и безналичный расчет</h4>
+									<p>Оплачивайте покупки наиболее 
+										удобным для вас способом</p>
+									</div>
+								</div>
+								<!-- end item-ifno -->
+							</div>
+							<!-- end 3rd row -->
 					</div>
 
-				</section>
-				<!-- end section-2 -->
+						</section>
+						<!-- end section-2 -->
 
 
 
 
-				<!-- ================== end body ================= -->
-				<link rel="stylesheet" href="css/main.min.css">
-				<script src="js/scripts.min.js"></script>
-			</body>
-			</html>
+						<!-- ================== end body ================= -->
+						<link rel="stylesheet" href="css/main.min.css">
+						<script src="js/scripts.min.js"></script>
+					</body>
+					</html>
