--- a/app/index.html
+++ b/app/index.html
@@ -217,7 +217,7 @@
 				<div class="container">
 					<div class="row 1st-row">
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -232,7 +232,7 @@
 						<!-- end good item -->
 
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -247,7 +247,7 @@
 						<!-- end good item -->
 
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -262,7 +262,7 @@
 						<!-- end good item -->
 
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -280,7 +280,7 @@
 					<!-- 2nd row -->
 					<div class="row">
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -295,7 +295,7 @@
 						<!-- end good item -->
 
 						<!-- good item -->
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
 								<div class="good-img-blc">
@@ -310,7 +310,7 @@
 						<!-- end good item -->
 						
 						<!-- wide-good item -->
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-6">
 
 							<div class="item-good-wide">
 								<div class="good-wide-img-blc">
@@ -334,66 +334,96 @@
 						</div>
 						<!-- end 2nd row -->
 						<!-- 3rd row -->
-					<div class="row 3rd-row">
-					<!-- item-ifno -->
-						<div class="col-lg-3">
-							<div class="item-info">
-								<img src="img/info-sec2.png" alt="">
-								<h4>Наличный <br>
-									и безналичный расчет</h4>
-									<p>Оплачивайте покупки наиболее 
-										удобным для вас способом</p>
+						<div class="row third-row">
+							<!-- item-ifno -->
+							<div class="col-lg-3 col-md-3 col-sm-3">
+								<div class="item-info">
+									<img src="img/info-sec2.png" alt="">
+									<h4>Наличный <br>
+										и безналичный расчет</h4>
+										<p>Оплачивайте покупки наиболее 
+											удобным для вас способом</p>
+										</div>
 									</div>
-								</div>
-								<!-- end item-ifno -->
+									<!-- end item-ifno -->
 
-								<!-- item-ifno -->
-						<div class="col-lg-3">
-							<div class="item-info">
-								<img src="img/info-sec2.png" alt="">
-								<h4>Наличный <br>
-									и безналичный расчет</h4>
-									<p>Оплачивайте покупки наиболее 
-										удобным для вас способом</p>
-									</div>
-								</div>
-								<!-- end item-ifno -->
+									<!-- item-ifno -->
+									<div class="col-lg-3 col-md-3 col-sm-3">
+										<div class="item-info">
+											<img src="img/info-sec2.png" alt="">
+											<h4>Наличный <br>
+												и безналичный расчет</h4>
+												<p>Оплачивайте покупки наиболее 
+													удобным для вас способом</p>
+												</div>
+											</div>
+											<!-- end item-ifno -->
 
-								<!-- item-ifno -->
-						<div class="col-lg-3">
-							<div class="item-info">
-								<img src="img/info-sec2.png" alt="">
-								<h4>Наличный <br>
-									и безналичный расчет</h4>
-									<p>Оплачивайте покупки наиболее 
-										удобным для вас способом</p>
-									</div>
-								</div>
-								<!-- end item-ifno -->
+											<!-- item-ifno -->
+											<div class="col-lg-3 col-md-3 col-sm-3">
+												<div class="item-info">
+													<img src="img/info-sec2.png" alt="">
+													<h4>Наличный <br>
+														и безналичный расчет</h4>
+														<p>Оплачивайте покупки наиболее 
+															удобным для вас способом</p>
+														</div>
+													</div>
+													<!-- end item-ifno -->
 
-								<!-- item-ifno -->
-						<div class="col-lg-3">
-							<div class="item-info">
-								<img src="img/info-sec2.png" alt="">
-								<h4>Наличный <br>
-									и безналичный расчет</h4>
-									<p>Оплачивайте покупки наиболее 
-										удобным для вас способом</p>
-									</div>
-								</div>
-								<!-- end item-ifno -->
-							</div>
-							<!-- end 3rd row -->
-					</div>
+													<!-- item-ifno -->
+													<div class="col-lg-3 col-md-3 col-sm-3">
+														<div class="item-info">
+															<img src="img/info-sec2.png" alt="">
+															<h4>Наличный <br>
+																и безналичный расчет</h4>
+																<p>Оплачивайте покупки наиболее 
+																	удобным для вас способом</p>
+																</div>
+															</div>
+															<!-- end item-ifno -->
+														</div>
+														<!-- end 3rd row -->
+													</div>
 
-						</section>
-						<!-- end section-2 -->
+												</section>
+												<!-- end section-2 -->
+												<!-- section-3 -->
+												<section class="section-3">
+													<div class="container">
+														<div class="row">
+														
+															<div class="col-lg-6 col-md-6 col-sm-6">
+																<h2>Пять строк на SEO-текст</h2>
+																<p>
+																	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+																	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+																	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+																	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+																	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+																	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+																</p>
+																<p>
+																	Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+																	doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+																	inventore veritatis et quasi beatae vitae dicta sunt explicabo. Nemo enim
+																	ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+																	consequuntur magni.
+																</p>
+															</div>
+															<div class="col-lg-6 col-md-6 col-sm-6">
+																<img src="img/sec3-phone-watch.png" alt="">
+															</div>
+														</div>
+													</div>
+												</section>
+												<!-- end section-3 -->
 
 
 
-
-						<!-- ================== end body ================= -->
-						<link rel="stylesheet" href="css/main.min.css">
-						<script src="js/scripts.min.js"></script>
-					</body>
-					</html>
+												<!-- ================== end body ================= -->
+												<link rel="stylesheet" href="css/main.min.css">
+												<script src="js/scripts.min.js"></script>
+											</body>
+											</html>
