--- a/app/index.html
+++ b/app/index.html
@@ -392,7 +392,7 @@
 												<section class="section-3">
 													<div class="container">
 														<div class="row">
-														
+
 															<div class="col-lg-6 col-md-6 col-sm-6">
 																<h2>Пять строк на SEO-текст</h2>
 																<p>
@@ -419,11 +419,41 @@
 													</div>
 												</section>
 												<!-- end section-3 -->
+												
+												<!-- section-4 -->
+												<section class="section-4">
+													<div class="container">
+														<div class="row">
+															<div class="col-lg-6">
+																<div class="contacts-blc">
+																	<div class="row">
+																		<div class="col-lg-6">
+																			<h3>Контакты</h3>
+																			<span>Адрес</span>
+																			<p>г. Константинополь, 
+																				ул. Константинопольская,
+																				д.34, корпус 156</p>
+																				<span>Телефон</span>
+																				<a href="tel+76950366516">+7 (695) 036-65-16</a>
+																			</div>
+																			<div class="col-lg-6 pos-rel">
+																				<div class="pos-abs-to-bottom">
+																					<span>Email</span>
+																					<a href="mailto:gadgetaccess.42@gmail.com">gadgetaccess.42@gmail.com</a>
+																				</div>
+																			</div>
+																		</div>
+
+																	</div>
+																</div>
+															</div>
+														</div>
+													</section>
+													<!-- end section-4 -->
 
 
-
-												<!-- ================== end body ================= -->
-												<link rel="stylesheet" href="css/main.min.css">
-												<script src="js/scripts.min.js"></script>
-											</body>
-											</html>
+													<!-- ================== end body ================= -->
+													<link rel="stylesheet" href="css/main.min.css">
+													<script src="js/scripts.min.js"></script>
+												</body>
+												</html>
