--- a/app/index.html
+++ b/app/index.html
@@ -424,10 +424,10 @@
 												<section class="section-4">
 													<div class="container">
 														<div class="row">
-															<div class="col-lg-6">
+															<div class="col-lg-6 col-md-7 col-sm-12">
 																<div class="contacts-blc">
 																	<div class="row">
-																		<div class="col-lg-6">
+																		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 																			<h3>Контакты</h3>
 																			<span>Адрес</span>
 																			<p>г. Константинополь, 
@@ -436,7 +436,7 @@
 																				<span>Телефон</span>
 																				<a href="tel+76950366516">+7 (695) 036-65-16</a>
 																			</div>
-																			<div class="col-lg-6 pos-rel">
+																			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pos-rel">
 																				<div class="pos-abs-to-bottom">
 																					<span>Email</span>
 																					<a href="mailto:gadgetaccess.42@gmail.com">gadgetaccess.42@gmail.com</a>
