--- a/app/index.html
+++ b/app/index.html
@@ -450,7 +450,54 @@
 														</div>
 													</section>
 													<!-- end section-4 -->
+													
+													<!-- footer -->
+													<footer>
+														<div class="container">
+														<!-- 1st row -->
+															<div class="row first-row">
 
+																<div class="col-lg-3">
+																	<div class="logo-wrapper">
+																		<img src="img/logo-black.png" alt="">
+																	</div>
+																</div>
+
+																<div class="col-lg-9">	
+																	<ul>
+																		<li><a href="">Каталог</a></li>
+																		<li><a href="">О компании</a></li>
+																		<li><a href="">Доставка и оплата</a></li>
+																		<li><a href="">Сервис и гарантия</a></li>
+																		<li><a href="">Контакты</a></li>
+																		<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
+																	</ul>
+																</div>
+
+															</div>
+															<!-- end 1st row -->
+															<!-- 2nd row -->
+															<div class="row second-row">
+
+																<div class="col-lg-5">
+																	<p>2010-2017© Gadget Access</p>
+																</div>
+
+																<div class="col-lg-7">
+																	<ul>
+																		<li><p>Мы в соцсетях:</p></li>
+																		<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
+																		<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
+																		<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
+																		<li><input type="text"></li>
+																	</ul>
+																</div>
+
+															</div>
+															<!-- end 2nd row -->
+														</div>
+													</footer>
+													<!-- end footer -->
 
 													<!-- ================== end body ================= -->
 													<link rel="stylesheet" href="css/main.min.css">
