footer without responisive

--- a/app/index.html
+++ b/app/index.html
@@ -454,7 +454,7 @@
 													<!-- footer -->
 													<footer>
 														<div class="container">
-														<!-- 1st row -->
+															<!-- 1st row -->
 															<div class="row first-row">
 
 																<div class="col-lg-3">
@@ -479,18 +479,29 @@
 															<!-- 2nd row -->
 															<div class="row second-row">
 
-																<div class="col-lg-5">
-																	<p>2010-2017© Gadget Access</p>
+																<div class="col-lg-4">
+																	<p class="first-p">2010-2017© Gadget Access</p>
 																</div>
 
-																<div class="col-lg-7">
-																	<ul>
-																		<li><p>Мы в соцсетях:</p></li>
+																<div class="col-lg-4">
+																	<ul class="pos-rel">
+																		<li><p class="second-p">Мы <br> в соцсетях:</p></li>
 																		<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
 																		<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
 																		<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
-																		<li><input type="text"></li>
+
 																	</ul>
+																</div>
+
+																<div class="col-lg-4">
+																	<div class="input-group">
+																				<input type="text" class="form-control " placeholder="Search for...">
+																				<span class="input-group-btn">
+																					<button class="btn search-btn" type="button">
+																						<i class="fa fa-search" aria-hidden="true"></i>
+																					</button>
+																				</span>
+																			</div>
 																</div>
 
 															</div>
