main page end (except drop-down mnu and btn icons)

--- a/app/index.html
+++ b/app/index.html
@@ -457,13 +457,13 @@
 															<!-- 1st row -->
 															<div class="row first-row">
 
-																<div class="col-lg-3">
+																<div class="col-lg-3 col-md-3 col-sm-12">
 																	<div class="logo-wrapper">
 																		<img src="img/logo-black.png" alt="">
 																	</div>
 																</div>
 
-																<div class="col-lg-9">	
+																<div class="col-lg-9 col-md-9 col-sm-12">	
 																	<ul>
 																		<li><a href="">Каталог</a></li>
 																		<li><a href="">О компании</a></li>
