others nav and footer

--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,12 @@
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
-	<style>body { opacity: 0; overflow-x: hidden; } html { background-color: #fff; }</style>
+	<style>body { opacity: 0header-main; overflow-x: hidden; } html { background-color: #fff; }</style>
 
 </head>
 
 <body>
-	<header>
+	<header class="header-main">
 		<!-- nav -->
 		<nav class="navbar navbar-default yamm">
 			<div class="container">
