service before owl

--- a/app/service.html
+++ b/app/service.html
@@ -110,71 +110,167 @@
 			</div>
 		</nav>
 		<!-- end nav -->
-	<header class="header-service">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto earum reprehenderit saepe molestiae, nesciunt expedita, harum quidem voluptas consequatur consectetur, dolore mollitia quos, quae soluta ut nulla officia maiores cum. Blanditiis quisquam ratione suscipit, quibusdam magnam sed eveniet laborum dignissimos nemo atque aspernatur dolor voluptate consectetur quidem eius voluptatem placeat excepturi esse voluptas necessitatibus omnis. Voluptatem, eveniet sint numquam officiis laborum molestiae nobis itaque saepe officia explicabo! Quod magni nemo suscipit vitae deleniti cupiditate quibusdam perferendis corrupti, sit earum non recusandae dicta culpa quia voluptate in, a voluptatem laudantium quos obcaecati repudiandae. Fugiat voluptates fuga commodi voluptatibus accusantium iure, enim placeat. Laboriosam ut perspiciatis aliquid praesentium accusantium magnam doloremque optio necessitatibus eaque cum, veniam labore, tempore placeat aspernatur voluptatum reprehenderit quod, iste! Rem facilis, harum mollitia minima minus eveniet laudantium quasi sequi sapiente voluptas? Molestiae nesciunt, sint ut, id voluptates voluptate ipsa nam numquam cumque corporis officiis eos libero aspernatur consequuntur saepe natus aliquid aperiam delectus alias eaque. Facilis eum obcaecati iusto delectus fugit, magnam, nulla. Voluptatum sapiente omnis, error architecto officia soluta rem! Tempora, saepe, fugit accusantium obcaecati minima, architecto doloremque eligendi porro maiores cumque eum nesciunt placeat, numquam aspernatur? Porro quo commodi, excepturi, optio officiis ut veritatis corporis maiores laboriosam tempora nisi expedita debitis quas, labore cupiditate? Aliquid porro qui suscipit repellendus consequatur alias voluptatibus ad temporibus labore culpa nobis quam, magni vel voluptates reiciendis. Quae temporibus iure, ipsum! Maiores dolor quasi reprehenderit velit nemo omnis illum? Exercitationem reiciendis delectus cupiditate eius accusamus, temporibus cum dicta atque praesentium inventore nihil voluptatem pariatur, debitis ex sapiente nostrum amet molestias fugit, laboriosam ut! Dolore odit et tenetur non quidem sapiente vero harum porro odio doloremque praesentium velit exercitationem beatae, ratione modi ipsa consequuntur atque obcaecati doloribus quam, architecto commodi. Nulla quidem quae ea adipisci dolorem tenetur autem cum vitae ipsa, iste. Laudantium corporis doloremque ab, sint maxime veritatis ut quaerat vitae provident aliquam molestias adipisci sunt harum necessitatibus, reprehenderit libero quis illo voluptatem nulla placeat dolor. Sit sunt praesentium, magni consequatur dignissimos temporibus expedita delectus! Nam, suscipit aliquam veritatis facilis rem sequi distinctio reprehenderit aliquid dolores corrupti accusamus eligendi expedita tempore, laboriosam accusantium numquam illum ipsam magnam corporis enim cupiditate alias quos earum. Adipisci corporis sequi provident quo, dicta odio assumenda quis nulla, quae cupiditate perspiciatis fuga a repellendus obcaecati soluta veritatis tempora eum rem qui earum veniam, nemo at nesciunt. Eligendi cum, eveniet, tempore ex voluptate impedit accusantium. Sunt doloribus deleniti omnis autem accusantium quos non nihil rerum repellendus provident dolores beatae, aut, impedit totam, quasi minima est possimus. Quas quia fugiat nostrum excepturi illo minus laborum sed eius pariatur libero corporis quam similique fuga quos quaerat in, minima laudantium. Suscipit perspiciatis, nulla id, cumque natus est necessitatibus itaque saepe fuga quidem impedit. Ullam, ut perspiciatis magnam amet sequi, saepe sint sunt, facere animi minima sed placeat repellendus maxime quam magni tempora voluptate officiis, iure harum. Sapiente ex voluptas, odit corporis culpa labore error suscipit, molestiae quo, maxime, iure dignissimos atque eos. Voluptates tempore ipsum, est fuga amet, alias dolorum, soluta fugit modi ipsam consequatur minima eaque perferendis quo excepturi eum. Aut doloremque esse optio asperiores at. Deleniti incidunt corporis dicta architecto similique quasi reiciendis voluptatum reprehenderit, accusantium iste, tempora fugit odit neque officiis consequatur cupiditate, eum beatae. Rerum eaque, laboriosam esse cum repudiandae harum, velit repellendus iusto eligendi incidunt animi perferendis soluta quae distinctio, maiores ullam voluptatem? Beatae molestiae, totam, facere, fuga nihil voluptatibus consequatur iste omnis id dolorum rem architecto laudantium libero deserunt sapiente sunt ullam molestias accusantium, aspernatur eaque autem non. Molestiae eligendi dicta iste quasi eum iusto cumque magni, aspernatur, nam, dolores officiis animi nostrum, beatae ratione. Laudantium reiciendis, eveniet maiores quasi vel totam! Vitae quae animi, reprehenderit quisquam fuga veniam? Aperiam rem minus nam ut eum inventore sunt repellat ducimus repellendus beatae saepe delectus dolorum architecto, quidem velit aliquid sed cum aspernatur explicabo unde, impedit labore. Quia, dolor, quae! Laborum vitae nobis impedit, corporis facere beatae totam magnam, harum, repudiandae commodi libero placeat quasi explicabo. Autem magnam modi ab perspiciatis alias iusto reprehenderit ipsam ducimus ex accusantium beatae id, maxime nihil error quo necessitatibus. Delectus sunt obcaecati, illo itaque! Quo iure doloribus labore, debitis laudantium blanditiis a beatae ratione aliquid magnam soluta iusto earum aliquam sit omnis modi, nemo dolor porro quaerat tempore eveniet ut excepturi quas maxime, error! Libero alias, voluptates quae. Ratione qui, reprehenderit neque. Cupiditate incidunt similique dolorum porro dolorem officia rerum repellendus voluptatem molestiae quos qui reprehenderit dolores praesentium sed dignissimos, nemo optio rem labore quo. Recusandae earum consequuntur ullam sunt, commodi rerum ut! Quas odit tempore nulla voluptas, culpa aperiam quae mollitia illum eius ratione, consequuntur veritatis ut possimus cupiditate minus beatae alias. Explicabo, molestiae eius atque ab voluptates voluptas, illo voluptatem. Voluptatibus sit iure amet maiores vero ea illum eligendi perferendis consequatur, iusto magni laborum incidunt porro? Ab, soluta ipsum quas, tempora facere suscipit voluptate aut dolorem nostrum autem debitis exercitationem animi atque dignissimos et assumenda, doloremque doloribus commodi eveniet quidem id! Tempora molestiae sint sequi, labore repudiandae, obcaecati ipsam reiciendis asperiores magnam laudantium iure voluptates ullam, deleniti delectus, tenetur ratione quos! Recusandae soluta odit minima fugiat tempora, similique temporibus dolorum eveniet ab amet exercitationem commodi corrupti tempore iste id rem fugit culpa explicabo? Repudiandae voluptates, optio dicta, quidem eius aliquid vitae voluptate accusamus at nisi veritatis. Fugiat, quasi error, aspernatur minus ea in vitae. Consequuntur ipsa sint culpa quam ducimus repellendus provident sequi. Nostrum eaque quisquam, fugiat autem harum soluta atque voluptatum reiciendis id deserunt voluptates reprehenderit facilis maiores, distinctio architecto voluptas nobis veritatis pariatur facere accusantium. Autem magnam id sequi temporibus facere, animi aliquid, repellendus ex repellat excepturi enim quo sint cumque nobis velit officia repudiandae esse dignissimos? Error repudiandae excepturi incidunt necessitatibus perferendis, recusandae iusto. Quisquam inventore ipsum, nobis iusto aperiam fugit eligendi voluptates! Quis repellendus, animi at! Aperiam laudantium maxime quis assumenda, alias maiores repellendus eveniet cum quaerat non doloribus numquam. Dolorem impedit error consequuntur rerum, adipisci praesentium vel commodi, blanditiis consequatur tempora vitae animi quod repellendus ducimus sapiente! Laborum perferendis vitae at architecto.
 	</header>
-													
-													<!-- footer -->
-													<footer>
-														<div class="container">
-															<!-- 1st row -->
-															<div class="row first-row">
+	<!-- section-1 -->
+	<section class="section-1-service">
+		<h3>Сервис и гарантия</h3>
+	</section>
+	<!-- end section-1 -->
+	<!-- section-2 -->
+	<section class="section-2-service">
+		<div class="container">
+			<div class="row">
+				<!-- section-2-wrapper -->
+				<div class="section-2-wrapper">
+					<!-- under-section-2-1 -->
+					<section class="under-section-2-1">
+						<img src="img/service-section-2-pic.jpg" alt="">
+					</section>
+					<!-- end under-section-2-1 -->
+					<!-- under-section-2-2 -->
+					<section class="under-section-2-2">
+						<div class="row">
+							<div class="col-lg-12">
+								<h4>Я предусматриваю то, что здесь возможен подзаголовок.</h4>
+								<p>Это обычный текст. Он будет таким по всему сайту. Далее будет рыба. Но это неточно. Конформизм понимает эриксоновский гипноз. 
+									Лидерство самопроизвольно. Толпа, на первый взгляд, интегрирует эриксоновский гипноз.Тест, конечно, традиционен. Автоматизм, 
+									в представлении Морено, точно просветляет страх. Эриксоновский гипноз однородно осознаёт ролевой психоз.Анима вызывает 
+									сублимированный автоматизм, и это неудивительно, если речь о персонифицированном характере первичной социализации. Роджерс 
+									определял терапию как, роль текстологически аннигилирует эмпирический интеракционизм. Сновидение, по определению, осознаёт 
+									конфликтный психоанализ одинаково по всем направлениям. Коллективное бессознательное притягивает страх. Аутотренинг, конечно, дает 
+									аутизм. Очевидно, что бихевиоризм просветляет гендерный гендер.</p>
+								</div>
+							</div>
+						</section>
+						<!-- end under-section-2-2 -->
+						<!-- under-section-2-3 -->
+						<section class="under-section-2-3">
+							<div class="row">
+								<!-- item-service -->
+								<div class="col-lg-4 col-md-4 col-sm-4">
+									<div class="item-service">
+										<img src="img/ship.png" alt="">
+										<h4>Быстро и качественно</h4>
+										<p>У нас быстрое сервисное обслуживание.
+											Мы предоставляем гарантию
+											на любую проделанную работу и запчасть.</p>
+										</div>
+									</div>
+									<!-- end item-service-->
+									<!-- item-service -->
+									<div class="col-lg-4 col-md-4 col-sm-4">
+										<div class="item-service">
+											<img src="img/ship.png" alt="">
+											<h4>Быстро и качественно</h4>
+											<p>У нас быстрое сервисное обслуживание.
+												Мы предоставляем гарантию
+												на любую проделанную работу и запчасть.</p>
+											</div>
+										</div>
+										<!-- end item-service-->
+										<!-- item-service -->
+										<div class="col-lg-4 col-md-4 col-sm-4">
+											<div class="item-service">
+												<img src="img/ship.png" alt="">
+												<h4>Быстро и качественно</h4>
+												<p>У нас быстрое сервисное обслуживание.
+													Мы предоставляем гарантию
+													на любую проделанную работу и запчасть.</p>
+												</div>
+											</div>
+											<!-- end item-service-->
+										</div>
+									</section>
+									<!-- end under-section-2-3 -->
 
-																<div class="col-lg-3 col-md-3 col-sm-12">
-																	<div class="logo-wrapper">
-																		<img src="img/logo-black.png" alt="">
-																	</div>
-																</div>
+									<!-- under-section-2-4 -->
+									<section class="under-section-2-4">
+										<p>Я предусматриваю то, что здесь возможен даже список:</p>
+										<ul>
+											<li>Отступ в 20 px. </li>
+											<li>Обратите внимание на цвет текста. Он не чёрный. </li>
+											<li>На этом закончим. </li>
+										</ul>
+										<p>
+										Ещё немного текста. <a href="#">Ссылка в тексте.</a> Конформизм понимает эриксоновский гипноз. Лидерство самопроизвольно. Толпа, на первый взгляд, 
+										интегрирует эриксоновский гипноз. Тест, конечно, традиционен. Автоматизм, в представлении Морено, точно просветляет страх. 
+										Эриксоновский гипноз однородно осознаёт ролевой психоз.Анима вызывает сублимированный автоматизм, и это неудивительно, если речь 
+										о персонифицированном характере первичной социализации. Роджерс определял терапию как, роль текстологически аннигилирует 
+										эмпирический интеракционизм. Сновидение, по определению, осознаёт конфликтный психоанализ одинаково по всем направлениям. 
+										Коллективное бессознательное притягивает страх. Аутотренинг, конечно, дает аутизм. Очевидно, что бихевиоризм просветляет гендер.
 
-																<div class="col-lg-9 col-md-9 col-sm-12">	
-																	<ul>
-																		<li><a href="">Каталог</a></li>
-																		<li><a href="">О компании</a></li>
-																		<li><a href="">Доставка и оплата</a></li>
-																		<li><a href="">Сервис и гарантия</a></li>
-																		<li><a href="">Контакты</a></li>
-																		<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
-																	</ul>
-																</div>
+									</p>
+									</section>
+									
+									<!-- end under-section-2-4 -->
 
-															</div>
-															<!-- end 1st row -->
-															<!-- 2nd row -->
-															<div class="row second-row">
+								</div>
+								<!-- end section-2-wrapper -->
+							</div>
+						</div>
+					</section>
+					<!-- end section-2 -->
+					<!-- footer -->
+					<footer>
+						<div class="container">
+							<!-- 1st row -->
+							<div class="row first-row">
 
-																<div class="col-lg-4">
-																	<p class="first-p">2010-2017© Gadget Access</p>
-																</div>
+								<div class="col-lg-3 col-md-3 col-sm-12">
+									<div class="logo-wrapper">
+										<img src="img/logo-black.png" alt="">
+									</div>
+								</div>
 
-																<div class="col-lg-4">
-																	<ul class="pos-rel">
-																		<li><p class="second-p">Мы <br> в соцсетях:</p></li>
-																		<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
-																		<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
-																		<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
+								<div class="col-lg-9 col-md-9 col-sm-12">	
+									<ul>
+										<li><a href="">Каталог</a></li>
+										<li><a href="">О компании</a></li>
+										<li><a href="">Доставка и оплата</a></li>
+										<li><a href="">Сервис и гарантия</a></li>
+										<li><a href="">Контакты</a></li>
+										<li><a href="tel+78000000000">8 (800) 000-00-00</a></li>
+									</ul>
+								</div>
 
-																	</ul>
-																</div>
+							</div>
+							<!-- end 1st row -->
+							<!-- 2nd row -->
+							<div class="row second-row">
 
-																<div class="col-lg-4">
-																	<div class="input-group">
-																				<input type="text" class="form-control " placeholder="Search for...">
-																				<span class="input-group-btn">
-																					<button class="btn search-btn" type="button">
-																						<i class="fa fa-search" aria-hidden="true"></i>
-																					</button>
-																				</span>
-																			</div>
-																</div>
+								<div class="col-lg-4">
+									<p class="first-p">2010-2017© Gadget Access</p>
+								</div>
 
-															</div>
-															<!-- end 2nd row -->
-														</div>
-													</footer>
-													<!-- end footer -->
+								<div class="col-lg-4">
+									<ul class="pos-rel">
+										<li><p class="second-p">Мы <br> в соцсетях:</p></li>
+										<li><a href=""><img src="img/vk-footer.png" alt=""></a></li>
+										<li><a href=""></a><img src="img/inst-footer.png" alt=""></li>
+										<li><a href=""></a><img src="img/fb-footer.png" alt=""></li>
 
-													<!-- ================== end body ================= -->
-													<link rel="stylesheet" href="css/main.min.css">
-													<script src="js/scripts.min.js"></script>
-												</body>
-												</html>
+									</ul>
+								</div>
+
+								<div class="col-lg-4">
+									<div class="input-group">
+										<input type="text" class="form-control " placeholder="Search for...">
+										<span class="input-group-btn">
+											<button class="btn search-btn" type="button">
+												<i class="fa fa-search" aria-hidden="true"></i>
+											</button>
+										</span>
+									</div>
+								</div>
+
+							</div>
+							<!-- end 2nd row -->
+						</div>
+					</footer>
+					<!-- end footer -->
+
+					<!-- ================== end body ================= -->
+					<link rel="stylesheet" href="css/main.min.css">
+					<script src="js/scripts.min.js"></script>
+				</body>
+				</html>
